--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "test": "jest --env=node --colors --bail --detectOpenHandles --errorOnDeprecated --noStackTrace src/"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.6.0",
     "axios": "^0.19.0",
+    "jest": "^24.9.0",
     "ramda": "^0.26.1",
+    "tachyons": "^4.11.1",
     "vue": "^2.5.11",
     "vue-router": "^3.1.3",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.1",
+    "yn": "^3.1.1"
   },
   "browserslist": [
     "> 1%",
@@ -22,7 +27,7 @@
     "not ie <= 8"
   ],
   "devDependencies": {
-    "babel-core": "^6.26.0",
+    "babel-core": "^7.0.0-0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-3": "^6.24.1",
