--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/preset-env": "^7.6.0",
     "axios": "^0.19.0",
     "jest": "^24.9.0",
+    "moment": "^2.24.0",
     "ramda": "^0.26.1",
     "tachyons": "^4.11.1",
     "vue": "^2.5.11",
