--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "tachyons": "^4.11.1",
     "vue": "^2.5.11",
     "vue-router": "^3.1.3",
+    "vue2-hammer": "^2.1.2",
     "vuex": "^3.1.1",
     "yn": "^3.1.1"
   },
