--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ramda": "^0.26.1",
     "tachyons": "^4.11.1",
     "vue": "^2.5.11",
+    "vue-infinite-loading": "^2.4.4",
     "vue-router": "^3.1.3",
     "vue2-hammer": "^2.1.2",
     "vuex": "^3.1.1",
